[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "langchain-vectoramp"
version = "0.1.0"
description = "LangChain VectorStore integration for VectorAmp"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "VectorAmp, Inc." }]
keywords = ["vectoramp", "langchain", "vectorstore", "rag", "sable"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.25,<1",
  "langchain-core>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://vectoramp.com"
Documentation = "https://docs.vectoramp.com"
Repository = "https://github.com/VectorAmp/langchain-vectoramp"
Issues = "https://github.com/VectorAmp/langchain-vectoramp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_vectoramp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["langchain_vectoramp"]
warn_unused_configs = true
strict = true
